--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<div class="wrap">
 				<!-- Logo -->
 				<div class="logo">
-					<a href="index.html" title="Transfers"><img src="images/test.svg" alt="Transfers" /></a>
+					<a href="index.html" title="Transfers"><img class="imglogo" src="images/test.svg" alt="Transfers" /></a>
 				</div>
 				<!-- //Logo -->
 				
