--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Transfers - Private Transport and Car Hire HTML Template">
 	<meta name="author" content="themeenergy.com">
 	<script src="https://maps.googleapis.com/maps/api/js?libraries=places,geometry&key=AIzaSyD4f7K2HYVR4N4eGWgpKEvLjnsutYeGTJc"></script>
-
+     
 	<link rel="stylesheet" href="css/theme-pink.css" />
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 	<link rel="stylesheet" href="css/jquery-ui.theme.css" />
@@ -77,9 +77,9 @@
 				<form role="form" >
 					<!-- Row -->
 					<div class="f-row">
-						<div class="form-group datepicker one-third">
+						<div class="form-group  one-third">
 							<label for="dep-date">Date/heure de départ</label>
-							<input type="text" id="dep-date" autocomplete="off"
+							<input type="text" id="from-date-picker" autocomplete="off"
 							/>
 						</div>
 						
@@ -247,13 +247,13 @@
 				<figure class="featured-image">
 					<img src="images/uploads/img2.jpg" alt="" />
 					<div class="overlay">
-						<a href="services.html" class="expand">+</a>
+						<a href="index.html" class="expand">+</a>
 					</div>
 				</figure>
 				<div class="details">
-					<h4><a href="services.html">Private transfers</a></h4>
+					<h4><a href="index.html">Private transfers</a></h4>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-					<a class="more" title="Read more" href="services.html">Read more</a>
+		
 				</div>
 			</article>
 			<!-- //Item -->
@@ -263,13 +263,13 @@
 				<figure class="featured-image">
 					<img src="images/uploads/img2.jpg" alt="" />
 					<div class="overlay">
-						<a href="services.html" class="expand">+</a>
+						<a href="index.html" class="expand">+</a>
 					</div>
 				</figure>
 				<div class="details">
-					<h4><a href="services.html">Bus transfers</a></h4>
+					<h4><a href="index.html">Bus transfers</a></h4>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-					<a class="more" title="Read more" href="services.html">Read more</a>
+			
 				</div>
 			</article>
 			<!-- //Item -->
@@ -279,13 +279,12 @@
 				<figure class="featured-image">
 					<img src="images/uploads/img2.jpg" alt="" />
 					<div class="overlay">
-						<a href="services.html" class="expand">+</a>
+						<a href="index.html" class="expand">+</a>
 					</div>
 				</figure>
 				<div class="details">
-					<h4><a href="services.html">Shuttle transfers</a></h4>
+					<h4><a href="index.html">Shuttle transfers</a></h4>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-					<a class="more" title="Read more" href="services.html">Read more</a>
 				</div>
 			</article>
 			<!-- //Item -->
@@ -295,13 +294,12 @@
 				<figure class="featured-image">
 					<img src="images/uploads/img2.jpg" alt="" />
 					<div class="overlay">
-						<a href="services.html" class="expand">+</a>
+						<a href="index.html" class="expand">+</a>
 					</div>
 				</figure>
 				<div class="details">
-					<h4><a href="services.html">Helicopter transfers</a></h4>
+					<h4><a href="index.html">Helicopter transfers</a></h4>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-					<a class="more" title="Read more" href="services.html">Read more</a>
 				</div>
 			</article>
 			<!-- //Item -->			
