--- a/index.html
+++ b/index.html
@@ -245,12 +245,13 @@
 			<!-- Item -->
 			<article class="one-fourth wow fadeIn">
 				<figure class="featured-image">
-					<img src="images/uploads/img2.jpg" alt="" />
+					<img  class="alb" src="images/uploads/1.jpg" alt="" />
 					<div class="overlay">
 						<a href="index.html" class="expand">+</a>
 					</div>
 				</figure>
 				<div class="details">
+					<br>
 					<h4><a href="index.html">Private transfers</a></h4>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
 		
@@ -261,12 +262,13 @@
 			<!-- Item -->
 			<article class="one-fourth wow fadeIn" data-wow-delay=".2s">
 				<figure class="featured-image">
-					<img src="images/uploads/img2.jpg" alt="" />
+					<img  class="alb" src="images/uploads/2.jpg" alt="" />
 					<div class="overlay">
 						<a href="index.html" class="expand">+</a>
 					</div>
 				</figure>
 				<div class="details">
+					<br>
 					<h4><a href="index.html">Bus transfers</a></h4>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
 			
@@ -277,12 +279,14 @@
 			<!-- Item -->
 			<article class="one-fourth wow fadeIn" data-wow-delay=".4s">
 				<figure class="featured-image">
-					<img src="images/uploads/img2.jpg" alt="" />
+					<img  class="alb" src="images/uploads/5.jpg" alt="" />
 					<div class="overlay">
+						
 						<a href="index.html" class="expand">+</a>
 					</div>
 				</figure>
 				<div class="details">
+					<br>
 					<h4><a href="index.html">Shuttle transfers</a></h4>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
 				</div>
@@ -292,12 +296,13 @@
 			<!-- Item -->
 			<article class="one-fourth wow fadeIn" data-wow-delay=".6s">
 				<figure class="featured-image">
-					<img src="images/uploads/img2.jpg" alt="" />
+					<img  class="alb" src="images/uploads/3.jpg" alt="" />
 					<div class="overlay">
 						<a href="index.html" class="expand">+</a>
 					</div>
 				</figure>
 				<div class="details">
+					<br>
 					<h4><a href="index.html">Helicopter transfers</a></h4>
 					<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
 				</div>
@@ -307,7 +312,7 @@
 		<!-- //Services -->
 		
 		<!-- Testimonials -->
-		<div class="testimonials center black">
+		<div class="testimonials center black container-fluid">
 			<div class="wrap">
 				<h6 class="wow fadeInDown"><i class="fa fa-quote-left"></i>Wow, this theme is outstanding!</h6>
 				<p class="wow fadeInUp">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
