--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
 						<div class="form-group right">
 							<button" type="ok" class="btn large black"><a    href="tel:+41215255500" >Appelez-nous</a></button>
 						</div>
+						
+						<div class="form-group left">
+							<img class="twint" src="images/uploads/twint.png"/>
+						</div>
+						<div class="form-group left">
+							<img class="visa" src="images/uploads/visa.png"/>
+						</div>
 					</div>
 					
 					<!--// Row -->
