--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 	<!-- Main -->
 	<main class="main" role="main">
 		<!-- Intro -->
-		<div class="intro">
+		<div class="intro img-responsive">
 			<div class="wrap">
 				<div class="textwidget">
 					<h1 class="wow fadeInDown">Appelez-nous</h1>
