--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 		
 		<!-- Testimonials -->
 		<div class="testimonials center  container-fluid">
-			<div class="wrap"> <br><br><br>
+			<div class="wrap"> <br><br>
 				<h6 class="wow fadeInDown"><i class="fa fa-quote-left"></i>Wow, this theme is outstanding!</h6>
 				<p class="wow fadeInUp">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
 				<p class="meta wow fadeInUp">-John Doe, themeforest</p>
