--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>My Taxi Lausanne</title>
+	<title>My Taxi Lausanne  021 525 55 00 </title>
 	<meta name="keywords" content="my Taxi Lausanne, Taxi,Lausanne " />
 	
 	<meta name="description" content="my Taxi lausanne 021 525 55 00 ">
