--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 					
 		</div>
 		<div >
-		<p style="color: #191F26; text-transform:none;"> * Vendredi soir et Samedi soir (22h à 6h du matin) le tarif est légèrement plus élevé
+		<p style="color: #191F26; text-transform:none;"> * Vendredi soir et Samedi soir (22h à 6h du matin) le tarif est plus élevé
 				</p>	</div>
 					<!-- Row -->
 					<div class="f-row">
