--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 						<div class="form-group right">
 							<button" type="ok" class="btn large black"><a    href="tel:+41215255500" >Appelez-nous</a></button>
 						</div>
+						<!--Logos -->
 						
 						<div class="form-group left">
 							<img class="twint" src="images/uploads/twint.png"/>
